[tool.poetry]
name = "aiohttp-doh"
version = "0.2.1"
description = "DNS over HTTPS reslover for aiohttp"
authors = ["Kim Jin Su <item4_hun@hotmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/item4/aiohttp-doh/"
keywords = [
    "aiohttp",
    "asyncio",
    "dns",
    "https",
    "security"
]
classifiers = [
    'Development Status :: 3 - Alpha'
]

[tool.poetry.dependencies]
python = ">=3.5.3"
aiohttp = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
